force-app/main/default/objects/User/fields/Portal_View_Mode__c.field-meta.xml
<CustomField>
    <fullName>Portal_View_Mode__c</fullName>
    <label>Portal View Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRID_VIEW</fullName>
            </value>
            <value>
                <fullName>LIST_VIEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>