force-app/main/default/objects/User/fields/TLG_Collapsed_Columns__c.field-meta.xml
<CustomField>
    <fullName>TLG_Collapsed_Columns__c</fullName>
    <description>Stores the comma-separated list of collapsed column status names for kanban board user preferences</description>
    <label>Collapsed Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>