force-app/main/default/objects/User/fields/TLG_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>TLG_Portal_User__c</fullName>
    <formula>&apos;005Hr00000EWAKbIAP&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal User</label>
    <type>Text</type>
</CustomField>